#cargo-features = ["resolver"]
[package]
name = "rust_stm32_motor"
version = "0.1.0"
authors = ["joshua salzedo <thHunkn0WNd@gmail.com>"]
edition = "2018"
#resolver = "2"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
cortex-m = "0.6.2"
cortex-m-rtic = "0.5.1"
stm32f4 = "0.11.0"
heapless = "0.5.5"
cobs = { version = "0.1.4", default-features = false }
postcard = "0.5.0"
postcard-cobs = { version = "0.1.5-pre", default-features = false }
serde = { version = "1.0.114", default-features = false }
rover_postcards = { git = "ssh://git@gitlab.com/saddeback_rover_2020/telecom/postcards.git", branch = "master" }


[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f446"] # replace the model of your microcontroller here

[dependencies.rtt-target]
version = "0.2.0"
features = ["cortex-m"]

[dependencies.panic-rtt-target]
version = "0.1.0"
features = ["cortex-m"]